[package]
name = "understood"
version = "0.3.11"
edition = "2021"
authors = ["github.com/jerryshell"]

[dependencies]
image = "*"
similars_lib = { git = "https://github.com/jerryshell/similars" }
rand = "*"
threadpool = "*"
num_cpus = "*"
clap = { version = "*", features = ["derive"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
panic = "abort"
codegen-units = 1
