[package]
name = "understood"
version = "0.3.11"
edition = "2021"

[dependencies]
image = "*"
similars_lib = { git = "https://github.com/jerryshell/similars" }
rand = "*"
threadpool = "*"
num_cpus = "*"
clap = { version = "*", features = ["derive"] }
tracing = "*"
tracing-subscriber = "*"

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
