[package]
name = "understood"
version = "0.4.1"
edition = "2021"

[dependencies]
tracing = "*"
tracing-subscriber = "*"
clap = { version = "*", features = ["derive"] }
similars_lib = { git = "https://github.com/jerryshell/similars" }

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
